@@ -3,6 +3,7 @@
 -Added condition for !sweatbot and !sbgamble that if subs only is checked in the control menu, only subs can use the command
 -Added Sub only mode for bot commands
 -Adjusted Pixelate overlay to prevent a 'after image' after being ran more than once
+-Added custom names for the bots currency
 
 1.0.0.79-alpha
 -Fixed refund menu taking awhile to refresh after ever refund
